# TrustBridge-contracts

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Makefile  ORACLE_DEPLOYMENT_STATUS.md  README.md
.github/workflows/: pull_request.yml  release.yml
.stellar/identity/: my-oracle-testnet.toml  oracle-deployer.toml
backstop/: Cargo.toml
backstop/src/: contract.rs  testutils.rs
backstop/src/backstop/: deposit.rs  mod.rs  pool.rs
backstop/src/emissions/: claim.rs  distributor.rs
contracts/backstop/: Cargo.toml
contracts/backstop/src/: constants.rs  errors.rs  events.rs  lib.rs  storage.rs
contracts/backstop/src/backstop/: fund_management.rs  user.rs  withdrawal.rs
contracts/backstop/src/dependencies/: mod.rs  pool.rs  pool_factory.rs
contracts/backstop/src/emissions/: manager.rs  mod.rs
contracts/emitter/: README.md
contracts/mocks/mock-pool-factory/src/: storage.rs
contracts/mocks/mock-pool/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: storage.rs
contracts/pool/: Cargo.toml
contracts/pool-factory/: Cargo.toml
contracts/pool-factory/src/: pool_factory.rs  test.rs
contracts/pool/src/: contract.rs  storage.rs  testutils.rs
contracts/pool/src/auctions/: auction.rs  backstop_interest_auction.rs  user_liquidation_auction.rs
contracts/pool/src/dependencies/: backstop.rs
contracts/pool/src/pool/: config.rs  gulp.rs  interest.rs  pool.rs  submit.rs
contracts/tbrg-token/: Cargo.toml
custom-oracle/: Cargo.toml
custom-oracle/src/: lib.rs
docs/: CONTRIBUTORS_GUIDELINE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  deploy_guide.md
mocks/mock-pool/: Cargo.toml
mocks/mock-pool-factory/: Cargo.toml
mocks/mock-pool-factory/src/: pool_factory.rs
mocks/moderc3156/: Cargo.toml
mocks/moderc3156/src/: lib.rs
oracle/: Cargo.toml
oracle/src/: error.rs  events.rs  lib.rs  test.rs
pool/: Cargo.toml
pool-factory/: Cargo.toml
pool-factory/src/: events.rs  lib.rs  pool_factory.rs  storage.rs
pool/src/: constants.rs  errors.rs  events.rs  lib.rs  validator.rs
pool/src/auctions/: bad_debt_auction.rs
pool/src/emissions/: distributor.rs  manager.rs
pool/src/pool/: actions.rs  bad_debt.rs  health_factor.rs  mod.rs  reserve.rs  status.rs  submit.rs  user.rs
scripts/: configure-reserves.ts  deploy-trustbridge-microloans.ts  deploy_oracle.sh  transfer_admin.sh  verify-pool.ts
src/: contract.rs  lib.rs
src/oracle/: mod.rs  storage.rs
test-suites/: Cargo.toml
test-suites/fuzz/: Cargo.toml
test-suites/src/: backstop.rs  lib.rs  liquidity_pool.rs  pool.rs  setup.rs  snapshot.rs  test_fixture.rs
test-suites/tests/: test_backstop.rs  test_backstop_and_pool_failure.rs  test_backstop_rz_changes.rs  test_flashloan.rs  test_liquidation.rs  test_pool_inflation_attack.rs  test_pool_interest.rs
testing/test-suites/: Cargo.toml
testing/test-suites/fuzz/: lib.rs
testing/test-suites/fuzz/fuzz_targets/: fuzz_pool_general.rs
testing/test-suites/src/: assertions.rs  asset_fetcher.rs  emitter.rs  lib.rs  mainnet-55261759-snapshot.json  moderc3156.rs  oracle.rs  pool_factory.rs  token.rs
testing/test-suites/tests/: test_asset_fetcher.rs  test_backstop_inflation_attack.rs  test_backstop_swap.rs  test_overflow_flag.rs  test_pool.rs  test_pool_max_position_reduction.rs  test_wasm_happy_path.rs
tools/: deploy-all.sh
tools/scripts/: .eslintrc.json  deploy-with-production-config.ts  set_price_batch.sh  smoke_test.sh  test_new_admin.sh  verify_oracle.sh
