[workspace]
resolver = "2"
members = [
  "contracts/tbrg-token",
  "contracts/oracle",
  "contracts/pool-factory"
]

exclude = [
  "contracts/backstop",
  "contracts/pool",
  "contracts/mocks/mock-pool-factory",
  "contracts/mocks/mock-pool",
  "contracts/mocks/moderc3156",
  "testing/test-suites"
]

[workspace.dependencies]
soroban-sdk = "20.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
