[package]
name = "backstop"
version = "2.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
soroban-fixed-point-math = { workspace = true }
cast = { workspace = true }
sep-41-token = { workspace = true }
blend-contract-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock-pool-factory = { path = "../mocks/mock-pool-factory", features = ["testutils"] }
sep-41-token = { workspace = true, features = ["testutils"] }
blend-contract-sdk = { workspace = true, features = ["testutils"] }
mock-pool = { path = "../mocks/mock-pool", features = ["testutils"] }
