[package]
name = "pool"
version = "2.0.0"
authors = ["Blend Capital <gm@blend.capital>"]
license = "AGPL-3.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = [
    "soroban-sdk/testutils",
]

[dependencies]
soroban-sdk = "20.0.0"
soroban-fixed-point-math = "1.3.0"
cast = "0.3.0"
sep-40-oracle = "1.2.0"
sep-41-token = "1.2.0"
# moderc3156-example = { workspace = true}  # Commented to avoid circular dependency

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
backstop = { path = "../backstop", features = ["testutils"] }
sep-40-oracle = { version = "1.2.0", features = ["testutils"] }
sep-41-token = { version = "1.2.0", features = ["testutils"] }
blend-contract-sdk = { version = "1.22.0", features = ["testutils"] }
# mock-pool-factory = { path = "../mocks/mock-pool-factory", features = ["testutils"] }  # Temporarily commented
# moderc3156-example = { path = "../mocks/moderc3156", features = ["testutils"] }  # Temporarily commented


